--- a/_Imports.razor
+++ b/_Imports.razor
@@ -38,6 +38,7 @@
 @using modulum.Application.Requests.Identity
 @using modulum.Application.Validators.Requests.Identity
 @using Modulum.Client.Pages.Authentication.Register
+@using Modulum.Client.Pages.Authentication.Recuperacao
 @using modulum.Client.Infrastructure.Managers
 
 @*using modulum.Client.Pages.Authentication*@
